--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,3 +19,6 @@
 @use 'chunks/dashboard/contacts';
 
 @use 'chunks/detail/detail-first';
+@use 'chunks/detail/project';
+@use 'chunks/detail/progress';
+@use 'chunks/detail/review-client';
