--- a/templates/dashboard/works.html
+++ b/templates/dashboard/works.html
@@ -22,7 +22,7 @@
   <div class="works__slider swiper outer-swiper">
     <div class="swiper-wrapper">
       <div class="works__item swiper-slide">
-        <div class="works__item-images swiper inner-swiper">
+        <div class="works__item-images swiper inner-swiper" data-gallery-root>
           <div class="swiper-wrapper">
             <div class="swiper-slide ">
               <div class="works__item-wrap works__slide">
@@ -38,48 +38,19 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
-            </div>
-          </div>
-        </div>
-        <div class="works__item-main">
-          <div class="swiper-pagination inner-pagination"></div>
-          <div class="works__item-title">
-            Ремонт 2х ком., 42 м2
-          </div>
-          <div class="works__item-text">
-            Под ключ с мебелью за 56 дней.Стоимость работ: 35 000 руб/м2. Калининград, ул.Толстикова, ЖК «Мичуринский
-            парк» ул.Толстикова, ЖК «Мичуринский
-            парк»
-          </div>
-          <a href="" class="works__item-more">
-            Подробнее
-            <svg class="icon" width="32" height="24">
-              <use href="/images/sprite.svg#arrow" fill="currentColor"></use>
-            </svg>
-          </a>
-        </div>
-      </div>
-      <div class="works__item swiper-slide">
-        <div class="works__item-images swiper inner-swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
-            </div>
-            <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
-            </div>
-            <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
-            </div>
-            <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
           </div>
         </div>
@@ -102,19 +73,27 @@
         </div>
       </div>
       <div class="works__item swiper-slide">
-        <div class="works__item-images swiper inner-swiper">
+        <div class="works__item-images swiper inner-swiper" data-gallery-root>
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
           </div>
         </div>
@@ -137,19 +116,27 @@
         </div>
       </div>
       <div class="works__item swiper-slide">
-        <div class="works__item-images swiper inner-swiper">
+        <div class="works__item-images swiper inner-swiper" data-gallery-root>
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
           </div>
         </div>
@@ -172,19 +159,70 @@
         </div>
       </div>
       <div class="works__item swiper-slide">
-        <div class="works__item-images swiper inner-swiper">
+        <div class="works__item-images swiper inner-swiper" data-gallery-root>
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
             <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="works__item-main">
+          <div class="swiper-pagination inner-pagination"></div>
+          <div class="works__item-title">
+            Ремонт 2х ком., 42 м2
+          </div>
+          <div class="works__item-text">
+            Под ключ с мебелью за 56 дней.Стоимость работ: 35 000 руб/м2. Калининград, ул.Толстикова, ЖК «Мичуринский
+            парк» ул.Толстикова, ЖК «Мичуринский
+            парк»
+          </div>
+          <a href="" class="works__item-more">
+            Подробнее
+            <svg class="icon" width="32" height="24">
+              <use href="/images/sprite.svg#arrow" fill="currentColor"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="works__item swiper-slide">
+        <div class="works__item-images swiper inner-swiper" data-gallery-root>
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="/images/work-slide.png">
+                <img class="works__item-image" src="/images/work-slide.png" alt="">
+              </a>
             </div>
           </div>
         </div>
