--- a/templates/detail/detail-first.html
+++ b/templates/detail/detail-first.html
@@ -1,6 +1,9 @@
 <section class="detail-first">
   <img class="detail-first__bg" src="/images/dark-bg.svg" alt="bg">
   <div class="wrap">
+    <h1 class="detail-first__title-mob">
+      Ремонт 2х ком., 42 м2
+    </h1>
     <div class="detail-first__wrapper">
       <div class="detail-first__images">
         <picture>
@@ -26,23 +29,44 @@
         <div class="detail-first__list">
           <div class="detail-first__item">
             <div class="detail-first__item-text">42 м2</div>
+            <div class="detail-first__item-dotted"></div>
             <div class="detail-first__item-title">площадь</div>
           </div>
           <div class="detail-first__item">
             <div class="detail-first__item-text">Под ключ с мебелью</div>
+            <div class="detail-first__item-dotted"></div>
             <div class="detail-first__item-title">тип ремонта</div>
           </div>
           <div class="detail-first__item">
-            <div class="detail-first__item-text">8 000 000 руб</div>
+            <div class="detail-first__item-text">8 000 000 руб
+              <div class="detail-first__item-hide">
+                <svg class="icon" width="24" height="24">
+                  <use href="/images/sprite.svg#info" fill="currentColor"></use>
+                </svg>
+                <div class="hide-block">
+                  Бюджет актуален на дату реализации проекта, точную стоимость вашего ремонта уточняйте у менеджера
+                  Мирастрой
+                </div>
+              </div>
+
+            </div>
+            <div class="detail-first__item-dotted"></div>
             <div class="detail-first__item-title">бюджет</div>
           </div>
           <div class="detail-first__item">
             <div class="detail-first__item-text">56 дней / лето 2024</div>
+            <div class="detail-first__item-dotted"></div>
             <div class="detail-first__item-title">реализация</div>
           </div>
           <div class="detail-first__item">
-            <div class="detail-first__item-text">«Мичуринский парк», Калининград</div>
-            <div class="detail-first__item-title">расположение</div>
+            <div class="detail-first__item-text">«Мичуринский парк»</div>
+            <div class="detail-first__item-dotted"></div>
+            <div class="detail-first__item-title">жилой комплекс</div>
+          </div>
+          <div class="detail-first__item">
+            <div class="detail-first__item-text">Калиниград</div>
+            <div class="detail-first__item-dotted"></div>
+            <div class="detail-first__item-title">город</div>
           </div>
         </div>
         <a href="#all-photo" class="detail-first__all">
