--- a/src/styles/chunks/dashboard/_first.scss
+++ b/src/styles/chunks/dashboard/_first.scss
@@ -149,55 +149,43 @@
         }
     }
 
-    &__images-wrap {
+    &__images-one {
         position: absolute;
-        top: 0;
-        left: 0;
+        top: 24px;
+        left: -24px;
         width: max-content;
         border-radius: 16px;
         overflow: hidden;
         transition: transform 0.8s ease-in-out;
         @include mixins.respond-max(tablet) {
             border-radius: 4px;
+            top: 10px;
+            left: -10px;
         }
+    }
+}
 
-        &::before {
-            content: '';
-            position: absolute;
-            inset: 0;
-            background: rgba(255, 255, 255, 0.6);
-            transition: opacity 0.8s ease-in-out;
-        }
+.fancybox__container.f-fadeIn {
+    animation: f-fadeIn 0.3s both;
+}
+.fancybox__container.f-fadeOut {
+    animation: f-fadeOut 0.2s both;
+}
 
-        // активная карточка
-        &.active {
-            z-index: 3;
-            // opacity: 1;
-            // transform: translate(0, 0) scale(1.02);
+@keyframes f-fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
-            &::before {
-                content: none;
-            }
-        }
-
-        // задаём смещения для «уровней»
-        &:nth-child(1) {
-            transform: translate(0px, 80px);
-            @include mixins.respond-max(tablet) {
-                transform: translate(-10px, 10px);
-            }
-        }
-        &:nth-child(2) {
-            transform: translate(80px, -20px);
-            @include mixins.respond-max(tablet) {
-                transform: translate(20px, -10px);
-            }
-        }
-        &:nth-child(3) {
-            transform: translate(-20px, 20px);
-            @include mixins.respond-max(tablet) {
-                transform: translate(-20px, 20px);
-            }
-        }
+@keyframes f-fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
     }
 }
