--- a/src/styles/chunks/detail/_detail-first.scss
+++ b/src/styles/chunks/detail/_detail-first.scss
@@ -22,6 +22,21 @@
         }
     }
 
+    &__title-mob {
+        display: none;
+        @include mixins.respond-max(tablet) {
+            display: block;
+            margin-bottom: 24px;
+        }
+    }
+
+    &__title {
+        display: block;
+        @include mixins.respond-max(tablet) {
+            display: none;
+        }
+    }
+
     &__wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -35,11 +50,18 @@
 
     &__images {
         position: relative;
+        align-self: flex-start;
     }
+
     &__image {
         width: 648px;
         height: 484px;
         object-fit: cover;
+        @include mixins.respond-max(tablet) {
+            width: 100%;
+            height: auto;
+            max-width: 420px;
+        }
     }
 
     &__plan {
@@ -51,6 +73,17 @@
         overflow: hidden;
         border-radius: 8px;
         cursor: pointer;
+        @include mixins.respond-max(tablet) {
+            width: 87px;
+            height: 80px;
+            right: 16px;
+            bottom: 16px;
+            & img {
+                object-fit: cover;
+                width: 87px;
+                height: 80px;
+            }
+        }
         &:hover {
             &::before {
                 background: rgba(56, 56, 56, 0.4);
@@ -76,72 +109,120 @@
             transition: 0.2s;
         }
     }
-}
 
-.before-after {
-    position: relative;
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
-    overflow: hidden;
-    aspect-ratio: 3 / 2; /* адаптивная высота */
-}
+    &__list {
+        margin: 32px 0;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        @include mixins.respond-max(tablet) {
+            margin: 24px 0;
+        }
+    }
 
-.images {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    cursor: ew-resize;
-}
+    &__item {
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+        // border-bottom: 1px dotted #4f4f4f;
+        &-dotted {
+            flex: 1;
+            border-bottom: 1px dotted #9a9a9a; // пунктирная линия
+            margin: 0 2px;
+            align-self: flex-end;
+            flex-shrink: 0;
+        }
+        &-text,
+        &-title {
+            position: relative;
+            @include mixins.type(18, 26);
+            @include mixins.respond-max(tablet) {
+                @include mixins.type(16, 24);
+            }
+        }
 
-.images img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    user-select: none;
-    pointer-events: none;
-}
+        &-title {
+            color: #9a9a9a;
+            position: relative;
+        }
+        &-text {
+            max-width: 220px;
+            white-space: nowrap;
+            position: relative;
+            display: flex;
+            // align-items: center;
+            gap: 6px;
+        }
+        &-hide {
+            &:hover {
+                & .hide-block {
+                    display: block;
+                }
+            }
 
-.after-wrap {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 50%; /* стартовая позиция */
-    overflow: hidden;
-    z-index: 2;
-}
+            & .hide-block {
+                position: absolute;
+                background: var(--bg);
+                width: 420px;
+                padding: 20px;
+                border: 1px solid #9a9a9a66;
+                color: #9a9a9a;
+                border-radius: 16px;
+                z-index: 1;
+                word-break: break-word;
+                white-space: wrap;
+                display: none;
+                top: 0;
+                @include mixins.type(16, 24);
+                @include mixins.respond-max(tablet) {
+                    left: -10px;
+                    width: 360px;
+                    padding: 10px;
+                    @include mixins.type(14, 20);
+                }
+            }
+        }
+    }
 
-.after-wrap .after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    &__all {
+        font-family: mixins.$font-secondary;
+        border-bottom: 1px dotted var(--text);
+        &:hover {
+            border-color: transparent;
+        }
+    }
 
-.divider {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 2px;
-    height: 100%;
-    background: #fff;
-    z-index: 3;
-}
+    &__manager {
+        display: grid;
+        grid-template-columns: 56px 1fr;
+        grid-gap: 16px;
+        margin-top: 32px;
+        & img {
+            width: 56px;
+            height: 56px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
 
-.divider span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 20px;
-    height: 20px;
-    background: #fff;
-    border: 2px solid #000;
-    border-radius: 50%;
+        &-name {
+            @include mixins.type(18, 26);
+            @include mixins.respond-max(tablet) {
+                @include mixins.type(16, 24);
+            }
+        }
+
+        &-more {
+            color: #9a9a9a;
+            @include mixins.type(18, 26);
+            @include mixins.respond-max(tablet) {
+                @include mixins.type(16, 24);
+            }
+            & a {
+                display: block;
+                @include mixins.respond-max(tablet) {
+                    display: inline;
+                }
+            }
+        }
+    }
 }
